<resources>
    <string name="app_name">WhatsApp</string>
    <string name="exemploTelefone">Numero: Ex: (11) 91230 8791</string>
    <string name="buttonEntrar">ENTRAR</string>
    <string name="cadastre_se">Não tem conta? Cadastre-se</string>
    <string name="logo">logo</string>
    <string name="Nome">Nome</string>
    <string name="butaoVerificar">Verificar</string>
    <string name="codigo">Código</string>
    <string name="BotaoCadastrar">Cadastrar</string>
    <string name="ImagemCadastrar">Imagem Cadastrar</string>
    <string name="codeText">Para concluir, ensira o código de seis digitos que foi enviado para seu celular via SMS, e clique no botão logar</string>
    <string name="menuPesquisar">Pesquisar</string>
    <string name="menuConfig">Configurações</string>
    <string name="menuExit">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="contatos">Contatos</string>
    <string name="conversas">Conversas</string>
    <string name="txtPerfil">Esse não é seu nome de usúario nem sua senha.\\nEste nome ficará visivel para seus contatos do Whatspp.</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
